--- a/templates/devAid/page-donate.html.twig
+++ b/templates/devAid/page-donate.html.twig
@@ -6,51 +6,128 @@
 
     <div class="row text-center">
         <div class="col" style="margin: 25px 0">
-
-            <!-- Button trigger modal -->
-            <a class="btn btn-light" href="javascript:;" data-toggle="modal" data-target="#donateModal">
-                <i class="fas fa-heart" style="color: red"></i> {{ 'supports_to_thenlabs'|trans }}
-            </a>
-
-            <!-- Modal -->
-            <div class="modal fade" id="donateModal" tabindex="-1" role="dialog" aria-labelledby="donateModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="donateModalLabel" style="margin: 0">{{ 'thanks_for_wanting_to_support_us'|trans }}</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            {% include 'content/donate-' ~ route_parameters._locale ~ '.html.twig' %}
-                        </div>
-                        <div class="modal-footer">
-                            <div style="font-size:16px;margin:0 auto;width:300px" class="blockchain-btn" data-address="{{ bitcoin_address }}" data-shared="false">
-                                <div class="blockchain stage-begin">
-                                    <button class="btn btn-info" type="button">
-                                        <i class="fas fa-heart" style="color: red"></i>
-                                        {{ 'donate_bitcoins'|trans }}
-                                    </button>
-                                </div>
-                                <div class="blockchain stage-loading" style="text-align:center">
-                                    <img src="https://blockchain.info/Resources/loading-large.gif" />
-                                </div>
-                                <div class="blockchain stage-ready">
-                                    <p align="center">{{ 'donate_to_bitcoin_address_message'|trans|raw }}</p>
-                                    <p align="center" class="qr-code"></p>
-                                </div>
-                                <div class="blockchain stage-paid">
-                                    {{ 'received_donation_message'|trans|raw }}
-                                </div>
-                                <div class="blockchain stage-error">
-                                    <font color="red">[[error]]</font>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div style="font-size:16px;margin:0 auto;width:300px" class="blockchain-btn" data-address="{{ bitcoin_address }}" data-shared="false">
+                <div class="blockchain stage-begin">
+                    <button class="btn btn-info" type="button">
+                        <i class="fas fa-heart" style="color: red"></i>
+                        {{ 'donate_bitcoins'|trans }}
+                    </button>
+                </div>
+                <div class="blockchain stage-loading" style="text-align:center">
+                    <img src="https://blockchain.info/Resources/loading-large.gif" />
+                </div>
+                <div class="blockchain stage-ready">
+                    <p align="center">{{ 'donate_to_bitcoin_address_message'|trans|raw }}</p>
+                    <p align="center" class="qr-code"></p>
+                </div>
+                <div class="blockchain stage-paid">
+                    {{ 'received_donation_message'|trans|raw }}
+                </div>
+                <div class="blockchain stage-error">
+                    <font color="red">[[error]]</font>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            var root = "https://blockchain.info/";
+            var buttons = $('.blockchain-btn');
+
+            buttons.find('.blockchain').hide();
+            buttons.find('.stage-begin').trigger('show').show();
+
+            buttons.each(function(index) {
+                var _button = $(this);
+
+                (function() {
+                    var button = _button;
+
+                    button.click(function() {
+                        var test = $(this).data('test');
+
+                        button.find('.blockchain').hide();
+                        button.find('.stage-loading').trigger('show').show();
+                        button.find('.qr-code').empty();
+
+                        $.getJSON('{{ path("invoice_address") }}', {}, (response) => {
+                            var receivers_address = response.address;
+
+                            function checkBalance() {
+                                $.ajax({
+                                    type: "GET",
+                                    url: root + 'q/getreceivedbyaddress/' + receivers_address +
+                                        '?start_time=' + (new Date).getTime(),
+                                    data: { format: 'plain' },
+                                    success: function(response) {
+                                        if (!response) return;
+
+                                        var value = parseInt(response);
+
+                                        if (value > 0 || test) {
+                                            button.find('.blockchain').hide();
+                                            button.find('.stage-paid').trigger('show').show().html(button.find('.stage-paid').html().replace('[[value]]', value / 100000000));
+                                        } else {
+                                            setTimeout(checkBalance, 5000);
+                                        }
+                                    }
+                                });
+                            }
+
+                            try {
+                                ws = new WebSocket('wss://ws.blockchain.info/inv');
+
+                                if (!ws) return;
+
+                                ws.onmessage = function(e) {
+                                    try {
+                                        var obj = $.parseJSON(e.data);
+
+                                        if (obj.op == 'utx') {
+                                            var tx = obj.x;
+
+                                            var result = 0;
+                                            for (var i = 0; i < tx.out.length; i++) {
+                                                var output = tx.out[i];
+
+                                                if (output.addr == receivers_address) {
+                                                    result += parseInt(output.value);
+                                                }
+                                            }
+                                        }
+
+                                        button.find('.blockchain').hide();
+                                        button.find('.stage-paid').trigger('show').show().html(button.find('.stage-paid').html().replace('[[value]]', result / 100000000));
+
+                                        ws.close();
+                                    } catch (e) {
+                                        console.log(e);
+
+                                        console.log(e.data);
+                                    }
+                                };
+
+                                ws.onopen = function() {
+                                    ws.send('{"op":"addr_sub", "addr":"' + receivers_address + '"}');
+                                };
+                            } catch (e) {
+                                console.log(e);
+                            }
+
+                            button.find('.stage-ready').trigger('show').show().html(button.find('.stage-ready').html().replace('[[address]]', receivers_address));
+                            button.find('.qr-code').html('<img style="margin:5px" src="' + root + 'qr?data=' + receivers_address + '&size=125">');
+                            button.unbind();
+
+                            // Check for incoming payment
+                            setTimeout(checkBalance, 5000);
+                        });
+                    });
+                })();
+            });
+        });
+    </script>
 {% endblock %}
