--- a/templates/content/donate-en.html.twig
+++ b/templates/content/donate-en.html.twig
@@ -1,9 +1,29 @@
-<p>ThenLabs has been created with the chimera of becoming an organization devoted to produce open source software.</p>
+<p>StratusPHP es un proyecto tipo framework que estamos desarrollando cuya principal finalidad consiste en permitir la manipulación del DOM de la página del navegador desde el propio lenguaje PHP.</p>
 
-<p>So far we have worked very hard, something that can be checked from our <a href="{{ path('index') }}" target="_blank">website</a>, <a href="{{ path('index') }}#socials" target="_blank">social networks</a>, <a href="https://github.com/thenlabs" target="_blank">GitHub</a>, etc. Everything has been done in our spare time since ThenLabs is not a source of employment at all.</p>
+<p>De esta forma, StratusPHP servirá para crear diferentes tipos de aplicaciones web modernas, como es el caso de las progresivas(PWA) y de las de una sola página(SPA), entre otras.</p>
 
-<p>However, when it comes to free time, it has not been enough lately to make as much progress as we would have wished to.</p>
+<p>No obstante, usted podrá ver que no solo servirá para crear aplicaciones web sino que además permitirá la creación de aplicaciones móviles y de escritorio, lo cual constituye un gran aporte para el ecosistema PHP pues actualmente este lenguaje se usa casi de manera absoluta para el desarrollo web solamente. Si tenemos en cuenta que aproximadamente el 80% de todos los sitios de Internet están basados en PHP, y que cada vez es más común que las aplicaciones móviles consuman de esos sitios, pues resulta un ahorro considerable de trabajo el poder desarrollar aplicaciones móviles desde el propio PHP dado que se reutilizaría muchísimo código fuente.</p>
 
-<p>Therefore, the possibility of receiving monetary donations has been enabled for us to devote more time to the Project in general.</p>
+<p>Por lo antes comentado podemos decir que StratusPHP es un proyecto bastante interesante, novedoso y del cual estamos convencidos de que podría llegar a convertirse en una sólida alternativa tecnológica a la hora de desarrollar con PHP.</p>
 
-<p>Given our commitment to the open source, we aspire to be financed through cryptocurrency althoug for now we only have the option of receiving bitcoins.</p>
+<p>Hasta el momento, hemos realizado una implementación totalmente funcional aunque bastante limitada pues aún faltan muchísimas funcionalidades por desarrollar. No obstante, en el siguiente listado usted podrá revisar todas las publicaciones que hemos venido haciendo sobre StratusPHP.</p>
+
+<ol>
+    <li><a href="https://thenlabs.org/es/blog/video-para-dar-a-conocer-el-desarrollo-de-un-nuevo-framework.html">Video para dar a conocer el desarrollo de un nuevo framework.</a></li>
+    <li><a href="https://thenlabs.org/es/blog/stratusphp-comunicacion-por-streaming.html">StratusPHP. Comunicación por streaming.</a></li>
+    <li><a href="https://thenlabs.org/es/blog/publicado-el-codigo-fuente-de-stratusphp.html">Publicado el código fuente de StratusPHP.</a></li>
+    <li><a href="https://thenlabs.org/es/blog/tomando-contacto-con-stratusphp.html">Tomando contacto con StratusPHP.</a></li>
+    <li><a href="https://thenlabs.org/es/blog/stratus-php-y-el-desarrollo-de-aplicaciones-moviles-demo.html">StratusPHP y el desarrollo de aplicaciones móviles (Demo)</a></li>
+</ol>
+
+<p>Todo el trabajo que hemos realizado hasta el momento ha sido en nuestro tiempo libre pues ThenLabs es un emprendimiento de muy reciente creación y todavía no constituye una fuente de empleo.</p>
+
+<p>Debido a que últimamente el tiempo libre nos resulta insuficiente para poder avanzar a la velocidad requerida, hemos decidido crear una campaña con el objetivo de recaudar ciertos fondos y de esta forma poder dedicarle el tiempo necesario a este proyecto que nos apasiona.</p>
+
+<blockquote>
+    <p>StratusPHP usa como dependencia todos los proyectos actuales de ThenLabs por lo que al apoyar al primero, en cierta medida, estará apoyando también a todos los demás.</p>
+</blockquote>
+
+<p>Sobre este tema de la recaudación de fondos es muy importante comentarles que ThenLabs cuenta con una dificultad adicional, y es que somos un emprendimiento formado en Cuba por programadores independientes y solo tenemos la posibilidad de recibir Bitcoins. Hemos analizado diferentes servicios online dedicados a la recaudación de fondos en general, y aunque en la mayoría de los casos dicen que funcionan en “todos los países del mundo”, en la práctica nunca incluyen a Cuba. Estamos tratando de que esa limitación nos afecte lo menos posible por lo que esperamos su comprensión.</p>
+
+<p>Muchas gracias.</p>
