--- a/templates/devAid/page.html.twig
+++ b/templates/devAid/page.html.twig
@@ -31,12 +31,14 @@
 {% endblock %}
 
 {% block before_body %}
-    {% set facebook_locale = 'en_US' %}
-    {% if route_parameters._locale == 'es' %}
-        {% set facebook_locale = 'es_ES' %}
+    {% if comments is defined and comments == true %}
+        {% set facebook_locale = 'en_US' %}
+        {% if route_parameters._locale == 'es' %}
+            {% set facebook_locale = 'es_ES' %}
+        {% endif %}
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/{{ facebook_locale }}/sdk.js#xfbml=1&version=v7.0&appId=1376605832728926&autoLogAppEvents=1" nonce="tVaW2yKx"></script>
     {% endif %}
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/{{ facebook_locale }}/sdk.js#xfbml=1&version=v7.0&appId=1376605832728926&autoLogAppEvents=1" nonce="tVaW2yKx"></script>
 {% endblock %}
 
 {% block left_sidebar %}
@@ -67,11 +69,13 @@
 
         {% block after_content %}{% endblock %}
 
-        <div class="row">
-            <div class="col">
-                <div class="fb-comments" data-href="{{ app.request.schemeAndHttpHost ~ app.request.requestUri }}" data-numposts="5" data-width="100%"></div>
+        {% if comments is defined and comments == true %}
+            <div class="row">
+                <div class="col">
+                    <div class="fb-comments" data-href="{{ app.request.schemeAndHttpHost ~ app.request.requestUri }}" data-numposts="5" data-width="100%"></div>
+                </div>
             </div>
-        </div>
+        {% endif %}
 
     </div><!--//docs-content-->
 {% endblock %}
