--- a/templates/content/donate-en.html.twig
+++ b/templates/content/donate-en.html.twig
@@ -1,29 +1,29 @@
-<p>StratusPHP es un proyecto tipo framework que estamos desarrollando cuya principal finalidad consiste en permitir la manipulación del DOM de la página del navegador desde el propio lenguaje PHP.</p>
+<p>StratusPHP is a framework project and its main objective is to allow manipulating the page DOM using the PHP language.</p>
 
-<p>De esta forma, StratusPHP servirá para crear diferentes tipos de aplicaciones web modernas, como es el caso de las progresivas(PWA) y de las de una sola página(SPA), entre otras.</p>
+<p>This way, StratusPHP could be used for creating different kinds of modern web applications like the progressive ones (PWA) and the ones of unique page (SPA) and more.</p>
 
-<p>No obstante, usted podrá ver que no solo servirá para crear aplicaciones web sino que además permitirá la creación de aplicaciones móviles y de escritorio, lo cual constituye un gran aporte para el ecosistema PHP pues actualmente este lenguaje se usa casi de manera absoluta para el desarrollo web solamente. Si tenemos en cuenta que aproximadamente el 80% de todos los sitios de Internet están basados en PHP, y que cada vez es más común que las aplicaciones móviles consuman de esos sitios, pues resulta un ahorro considerable de trabajo el poder desarrollar aplicaciones móviles desde el propio PHP dado que se reutilizaría muchísimo código fuente.</p>
+<p>However, you could see that it can be used for creating mobile applications and desktop applications. It is a great contribution to PHP ecosystem because now days this language is only used for web development. Developing mobile applications from the PHP language is going to be a considerable saving of work because the user can reutilize a lot of source code if we consider that most than 80% of web sites are based on PHP and applications’ consumption from the undersigned sites is going on.</p>
 
-<p>Por lo antes comentado podemos decir que StratusPHP es un proyecto bastante interesante, novedoso y del cual estamos convencidos de que podría llegar a convertirse en una sólida alternativa tecnológica a la hora de desarrollar con PHP.</p>
+<p>The previous arguments explain how interesting and novel this PHP project is and that is why we are totally convinced that it could become a sound technological alternative for users to work with PHP.</p>
 
-<p>Hasta el momento, hemos realizado una implementación totalmente funcional aunque bastante limitada pues aún faltan muchísimas funcionalidades por desarrollar. No obstante, en el siguiente listado usted podrá revisar todas las publicaciones que hemos venido haciendo sobre StratusPHP.</p>
+<p></p>
 
 <ol>
-    <li><a href="https://thenlabs.org/es/blog/video-para-dar-a-conocer-el-desarrollo-de-un-nuevo-framework.html">Video para dar a conocer el desarrollo de un nuevo framework.</a></li>
-    <li><a href="https://thenlabs.org/es/blog/stratusphp-comunicacion-por-streaming.html">StratusPHP. Comunicación por streaming.</a></li>
-    <li><a href="https://thenlabs.org/es/blog/publicado-el-codigo-fuente-de-stratusphp.html">Publicado el código fuente de StratusPHP.</a></li>
-    <li><a href="https://thenlabs.org/es/blog/tomando-contacto-con-stratusphp.html">Tomando contacto con StratusPHP.</a></li>
-    <li><a href="https://thenlabs.org/es/blog/stratus-php-y-el-desarrollo-de-aplicaciones-moviles-demo.html">StratusPHP y el desarrollo de aplicaciones móviles (Demo)</a></li>
+    <li><a href="https://thenlabs.org/en/blog/video-to-reveal-the-development-of-new-frameork.html">Video to reveal the development of new frameork.</a></li>
+    <li><a href="https://thenlabs.org/en/blog/stratus-php-communication-by-streaming.html">StratusPHP. Communication by streaming.</a></li>
+    <li><a href="https://thenlabs.org/en/blog/published-the-source-code-of-stratus-php.html">Published source code of StratusPHP</a></li>
+    <li><a href="https://thenlabs.org/en/blog/in-contact-with-stratus-php.html">In contact with StratusPHP.</a></li>
+    <li><a href="https://thenlabs.org/en/blog/stratusphp-and-the-development-of-mobile-applications-demo.html">StratusPHP and the development of mobile applications (Demo)</a></li>
 </ol>
 
-<p>Todo el trabajo que hemos realizado hasta el momento ha sido en nuestro tiempo libre pues ThenLabs es un emprendimiento de muy reciente creación y todavía no constituye una fuente de empleo.</p>
+<p>Up to now all our work has been on our free time because ThenLabs is a young project and it is not a source of employment, for now.</p>
 
-<p>Debido a que últimamente el tiempo libre nos resulta insuficiente para poder avanzar a la velocidad requerida, hemos decidido crear una campaña con el objetivo de recaudar ciertos fondos y de esta forma poder dedicarle el tiempo necesario a este proyecto que nos apasiona.</p>
+<p>We decided to create this campaign  because of our free time is not enough to progress at the necessary speed and that is why we need to collect funds for devoting time to this project that fascinate us.</p>
 
 <blockquote>
-    <p>StratusPHP usa como dependencia todos los proyectos actuales de ThenLabs por lo que al apoyar al primero, en cierta medida, estará apoyando también a todos los demás.</p>
+    <p>Supporting StratusPHP you are supporting all the others ThenLabsʹ projects because it uses as dependency all the other ones. </p>
 </blockquote>
 
-<p>Sobre este tema de la recaudación de fondos es muy importante comentarles que ThenLabs cuenta con una dificultad adicional, y es que somos un emprendimiento formado en Cuba por programadores independientes y solo tenemos la posibilidad de recibir Bitcoins. Hemos analizado diferentes servicios online dedicados a la recaudación de fondos en general, y aunque en la mayoría de los casos dicen que funcionan en “todos los países del mundo”, en la práctica nunca incluyen a Cuba. Estamos tratando de que esa limitación nos afecte lo menos posible por lo que esperamos su comprensión.</p>
+<p>If you are interested in support this project you have to know that we have an additional limitation because ThenLabs is a enterprise made up by independent programmers in Cuba. That is why we can just receive Bitcoins.  We have analyzed different online services about collection of funds and they say that ¨all countries are inclusive¨ but they never include Cuba. We are very grateful to you for understanding and for helping us.</p>
 
-<p>Muchas gracias.</p>
+<p>Thank you very much!</p>
