--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -84,7 +84,7 @@
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         {% for item in navigation %}
-                            <li class="{{ item.li_class }}"><a class="{{ item.a_class }}" href="{{ item.href }}">{{ item.text }}</a></li>
+                            <li class="{{ item.li_class }}"><a class="{{ item.a_class }}" href="{{ item.href }}">{{ item.text|raw }}</a></li>
                         {% endfor %}
 
                         <li class="nav-item dropdown">
