--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -28,7 +28,7 @@
             </div>
             <ul class="meta list-inline">
                 <li class="list-inline-item">
-                    <a href="https://github.com/thenlabs" target="_blank">
+                    <a href="{{ github_profile }}" target="_blank">
                         <i class="fab fa-github"></i>
                         {{ 'View on GitHub'|trans }}
                     </a>
