--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -33,6 +33,12 @@
             'href'    : path('index') ~ '#contact',
             'text'    : 'Contact'|trans,
         },
+        {
+            'li_class': 'nav-item',
+            'a_class' : 'nav-link scrollto',
+            'href'    : path('contribute'),
+            'text'    : 'contribute_title'|trans,
+        },
     ] %}
 {% endif %}
 
