--- a/templates/devAid/page-contribute.html.twig
+++ b/templates/devAid/page-contribute.html.twig
@@ -2,15 +2,28 @@
 {% extends 'devAid/page.html.twig' %}
 
 {% block page_content %}
-    <h5>1. Proponer ideas y opiniones.</h5>
+    <p>Primeramente queremos agradecer su intención de querer contribuir con nuestro proyecto dado que si está leyendo esta página seguramente usted se ha sentido motivado a hacerlo de alguna manera.</p>
+
+    <p>Como podrá ver seguidamente, existen varias formas en las que se puede colaborar con ThenLabs y en todos los casos apreciaremos mucho el apoyo recibido.</p>
+
+    <h5 id="ideas">1. Proponer ideas y opiniones.</h5>
     <p>Todos los mensajes que recibamos por parte de los usuarios serán tenidos muy en cuenta por nuestra parte. Da igual si es una crítica, idea o sugerencia. En cualquier caso vamos a sacar lo mejor con el objetivo de mejorar cada vez más.</p>
     <p>Para contactarnos usted puede escribirnos a la dirección de correo que mostramos al final de esta página.</p>
 
-    <h5>2. Compartir nuestros artículos en redes sociales.</h5>
+    <h5 id="share">2. Compartir nuestros artículos en redes sociales.</h5>
     <p>Otra de las formas en la que nos pueden ayudar los usuarios es compartiendo nuestros artículos en sus redes sociales. De esta forma, muchos más usuarios podrán conocernos y esto nos permitirá crecer como comunidad.</p>
-    <p>Para que se pueda enterar de todas nuestras nuevas publicaciones, usted se puede suscribir a nuestros perfiles sociales los cuales aparecen también al final de esta página.</p>
+    <p>Para que se pueda enterar de todas nuestras nuevas publicaciones, usted se puede suscribir a nuestros perfiles sociales los cuales se pueden encontrar también al final de esta página.</p>
 
-    <h5>3. Contribuir código fuente.</h5>
+    <h5 id="coding">3. Contribuir código fuente.</h5>
     <p>En el caso de los usuarios con conocimientos de programación estos podrían <strong>usar nuestros proyectos para ayudarnos a descubrir y/o corregir nuevos bugs</strong> , así como también <strong>proponer nuevas características</strong> que contribuyan a mejorar los proyectos en general.</p>
-    <p>Dado que nuestra razón de ser es el sofware de código abierto, todos nuestros proyectos(incluso este sitio) se pueden encontrar en nuestro perfil de <a href="{{ github_profile }}">GitHub</a>. Siéntase libre de hacer uso de los mismos.</p>
+    <p>Dado que nuestra razón de ser es el software de código abierto, todos nuestros proyectos(incluso este sitio) se pueden encontrar en nuestro perfil de <a href="{{ github_profile }}">GitHub</a>. Siéntase libre de hacer uso de los mismos.</p>
+
+    <h5 id="money">4. Hacer una contribución monetaria.</h5>
+    <p>Todo el trabajo que hemos realizado hasta el momento ha sido en nuestro tiempo libre pues ThenLabs es un emprendimiento de muy reciente creación y todavía no nos es posible involucrarnos a tiempo completo.</p>
+    <p>Debido a que últimamente el tiempo libre nos resulta insuficiente para avanzar a la velocidad requerida, hemos abierto la posibilidad de recibir donaciones monetarias con el objetivo de poder dedicar más tiempo al proyecto.</p>
+    <p>Sobre este tema de la recaudación de fondos queremos comentarle que ThenLabs es un emprendimiento creado por programadores cubanos independientes y por el momento solo tenemos las siguientes alternativas para los envíos de dinero que puedan querer hacer los usuarios.</p>
+    <ol>
+        <li><a href="https://www.tropipay.com/money-request/ce985a40-f391-11ea-ba85-43e971b10b3a">Donación de 12 euros a través de Tropipay.</a></li>
+        <li><a href="https://www.tropipay.com/money-request/159989a0-f392-11ea-ba85-43e971b10b3a">Donación de 24 euros a través de Tropipay.</a></li>
+    </ol>
 {% endblock %}
