--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -37,7 +37,7 @@
             'li_class': 'nav-item',
             'a_class' : 'nav-link scrollto',
             'href'    : path('contribute'),
-            'text'    : 'contribute_title'|trans,
+            'text'    : 'contribute'|trans,
         },
     ] %}
 {% endif %}
