--- a/templates/devAid/layout.html.twig
+++ b/templates/devAid/layout.html.twig
@@ -35,7 +35,7 @@
         },
         {
             'li_class': 'nav-item',
-            'a_class' : 'nav-link scrollto',
+            'a_class' : 'nav-link',
             'href'    : path('contribute'),
             'text'    : 'contribute'|trans,
         },
