--- a/templates/content/donate-es.html.twig
+++ b/templates/content/donate-es.html.twig
@@ -24,6 +24,11 @@
     <p>StratusPHP usa como dependencia todos los proyectos actuales de ThenLabs por lo que al apoyar al primero, en cierta medida, estará apoyando también a todos los demás.</p>
 </blockquote>
 
-<p>Sobre este tema de la recaudación de fondos es muy importante comentarles que ThenLabs cuenta con una dificultad adicional, y es que somos un emprendimiento formado en Cuba por programadores independientes y solo tenemos la posibilidad de recibir Bitcoins. Hemos analizado diferentes servicios online dedicados a la recaudación de fondos en general, y aunque en la mayoría de los casos dicen que funcionan en “todos los países del mundo”, en la práctica nunca incluyen a Cuba. Estamos tratando de que esa limitación nos afecte lo menos posible por lo que esperamos su comprensión.</p>
+<p>Sobre este tema de la recaudación de fondos queremos comentarle que ThenLabs es un emprendimiento creado por programadores cubanos independientes y por el momento solo tenemos las siguientes alternativas para los envíos de dinero que puedan querer hacer los usuarios.</p>
 
-<p>Muchas gracias.</p>
+<ol>
+    <li><a href="https://www.tropipay.com/money-request/ce985a40-f391-11ea-ba85-43e971b10b3a">Donación de 12 euros a través de Tropipay.</a></li>
+    <li><a href="https://www.tropipay.com/money-request/159989a0-f392-11ea-ba85-43e971b10b3a">Donación de 24 euros a través de Tropipay.</a></li>
+</ol>
+
+<p>Agradeceremos su contribución. Muchas gracias.</p>
