--- a/templates/devAid/page-contribute.html.twig
+++ b/templates/devAid/page-contribute.html.twig
@@ -26,4 +26,5 @@
         <li><a href="https://www.tropipay.com/money-request/ce985a40-f391-11ea-ba85-43e971b10b3a">Donación de 12 euros a través de Tropipay.</a></li>
         <li><a href="https://www.tropipay.com/money-request/159989a0-f392-11ea-ba85-43e971b10b3a">Donación de 24 euros a través de Tropipay.</a></li>
     </ol>
+    <p>Muchas gracias.</p>
 {% endblock %}
