--- a/templates/content/donate-es.html.twig
+++ b/templates/content/donate-es.html.twig
@@ -27,6 +27,7 @@
 <p>Sobre este tema de la recaudación de fondos queremos comentarle que ThenLabs es un emprendimiento creado por programadores cubanos independientes y por el momento solo tenemos las siguientes alternativas para los envíos de dinero que puedan querer hacer los usuarios.</p>
 
 <ol>
+    <li><a href="https://www.tropipay.com/money-request/7162bd40-f82b-11ea-af64-0d17f38bfa12">Donación de 6 euros a través de Tropipay.</a></li>
     <li><a href="https://www.tropipay.com/money-request/ce985a40-f391-11ea-ba85-43e971b10b3a">Donación de 12 euros a través de Tropipay.</a></li>
     <li><a href="https://www.tropipay.com/money-request/159989a0-f392-11ea-ba85-43e971b10b3a">Donación de 24 euros a través de Tropipay.</a></li>
 </ol>
