--- a/templates/devAid/page-contribute.html.twig
+++ b/templates/devAid/page-contribute.html.twig
@@ -26,6 +26,131 @@
         <li><a href="https://www.tropipay.com/money-request/7162bd40-f82b-11ea-af64-0d17f38bfa12">Donación de 6 euros a través de Tropipay.</a></li>
         <li><a href="https://www.tropipay.com/money-request/ce985a40-f391-11ea-ba85-43e971b10b3a">Donación de 12 euros a través de Tropipay.</a></li>
         <li><a href="https://www.tropipay.com/money-request/159989a0-f392-11ea-ba85-43e971b10b3a">Donación de 24 euros a través de Tropipay.</a></li>
+        <li>
+            <div class="row">
+                <div class="col">
+                    <div class="blockchain-btn" data-address="{{ bitcoin_address }}" data-shared="false">
+                        <div class="blockchain stage-begin">
+                            <a href="javascript:;">{{ 'donate_bitcoins'|trans }}</a>
+                        </div>
+                        <div class="blockchain stage-loading" style="text-align:center">
+                            <img src="https://blockchain.info/Resources/loading-large.gif" />
+                        </div>
+                        <div class="blockchain stage-ready">
+                            <p align="center">{{ 'donate_to_bitcoin_address_message'|trans|raw }}</p>
+                            <p align="center" class="qr-code"></p>
+                        </div>
+                        <div class="blockchain stage-paid">
+                            {{ 'received_donation_message'|trans|raw }}
+                        </div>
+                        <div class="blockchain stage-error">
+                            <font color="red">[[error]]</font>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
     </ol>
     <p>Muchas gracias.</p>
+{% endblock %}
+
+{% block scripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            var root = "https://blockchain.info/";
+            var buttons = $('.blockchain-btn');
+
+            buttons.find('.blockchain').hide();
+            buttons.find('.stage-begin').trigger('show').show();
+
+            buttons.each(function(index) {
+                var _button = $(this);
+
+                (function() {
+                    var button = _button;
+
+                    button.click(function() {
+                        var test = $(this).data('test');
+
+                        button.find('.blockchain').hide();
+                        button.find('.stage-loading').trigger('show').show();
+                        button.find('.qr-code').empty();
+
+                        $.getJSON('{{ path("invoice_address") }}', {}, (response) => {
+                            var receivers_address = response.address;
+
+                            function checkBalance() {
+                                $.ajax({
+                                    type: "GET",
+                                    url: root + 'q/getreceivedbyaddress/' + receivers_address +
+                                        '?start_time=' + (new Date).getTime(),
+                                    data: { format: 'plain' },
+                                    success: function(response) {
+                                        if (!response) return;
+
+                                        var value = parseInt(response);
+
+                                        if (value > 0 || test) {
+                                            button.find('.blockchain').hide();
+                                            button.find('.stage-paid').trigger('show').show().html(button.find('.stage-paid').html().replace('[[value]]', value / 100000000));
+                                        } else {
+                                            setTimeout(checkBalance, 5000);
+                                        }
+                                    }
+                                });
+                            }
+
+                            try {
+                                ws = new WebSocket('wss://ws.blockchain.info/inv');
+
+                                if (!ws) return;
+
+                                ws.onmessage = function(e) {
+                                    try {
+                                        var obj = $.parseJSON(e.data);
+
+                                        if (obj.op == 'utx') {
+                                            var tx = obj.x;
+
+                                            var result = 0;
+                                            for (var i = 0; i < tx.out.length; i++) {
+                                                var output = tx.out[i];
+
+                                                if (output.addr == receivers_address) {
+                                                    result += parseInt(output.value);
+                                                }
+                                            }
+                                        }
+
+                                        button.find('.blockchain').hide();
+                                        button.find('.stage-paid').trigger('show').show().html(button.find('.stage-paid').html().replace('[[value]]', result / 100000000));
+
+                                        ws.close();
+                                    } catch (e) {
+                                        console.log(e);
+
+                                        console.log(e.data);
+                                    }
+                                };
+
+                                ws.onopen = function() {
+                                    ws.send('{"op":"addr_sub", "addr":"' + receivers_address + '"}');
+                                };
+                            } catch (e) {
+                                console.log(e);
+                            }
+
+                            button.find('.stage-ready').trigger('show').show().html(button.find('.stage-ready').html().replace('[[address]]', receivers_address));
+                            button.find('.qr-code').html('<img style="margin:5px" src="' + root + 'qr?data=' + receivers_address + '&size=125">');
+                            button.unbind();
+
+                            // Check for incoming payment
+                            setTimeout(checkBalance, 5000);
+                        });
+                    });
+                })();
+            });
+        });
+    </script>
 {% endblock %}
