--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -62,6 +62,21 @@
             <div class="row">
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="content">
+                        <h3 class="sub-title">StratusPHP</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                            <span class="badge badge-success">Framework</span>
+                            <span class="badge badge-danger">{{ 'new'|trans }}</span>
+                        </div>
+                        <p>{{ 'project.description.stratus_php'|trans }}</p>
+                        <div>
+                            <a href="{{ path('doc', { project: 'stratus-php', branch: 'master', resource: 'index', extension: 'html' }) }}" class="btn btn-secondary btn-sm">{{ 'View Project'|trans }}</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
+
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
                         <h3 class="sub-title">ComposedViews</h3>
                         <div>
                             <span class="badge badge-info">PHP</span>
@@ -89,6 +104,8 @@
                     </div><!--//content-->
                 </div><!--//item-->
 
+                {# <div class="clearfix visible-md"></div> #}
+
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="content">
                         <h3 class="sub-title">Components</h3>
@@ -101,8 +118,6 @@
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
-
-                <div class="clearfix visible-md"></div>
 
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="content">
@@ -130,6 +145,8 @@
                     </div><!--//content-->
                 </div><!--//item-->
 
+                {# <div class="clearfix visible-md"></div> #}
+
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="content">
                         <h3 class="sub-title">GluePHP</h3>
@@ -137,7 +154,7 @@
                             <span class="badge badge-info">PHP</span>
                             <span class="badge badge-success">Framework</span>
                             <span class="badge badge-warning">{{ 'Previous'|trans }}</span>
-                            <span class="badge badge-danger">{{ 'Abandoned'|trans }}</span>
+                            <span class="badge badge-warning">{{ 'Abandoned'|trans }}</span>
                         </div>
                         <p>{{ 'project.description.glue_php'|trans }}</p>
                         <div>
