--- a/templates/devAid/page-index.html.twig
+++ b/templates/devAid/page-index.html.twig
@@ -175,6 +175,19 @@
                         </div>
                     </div><!--//content-->
                 </div><!--//item-->
+
+                <div class="item col-lg-4 col-md-6 col-12">
+                    <div class="content">
+                        <h3 class="sub-title">HttpServer</h3>
+                        <div>
+                            <span class="badge badge-info">PHP</span>
+                        </div>
+                        <p>{{ 'project.description.http_server'|trans }}</p>
+                        <div>
+                            <a href="https://github.com/thenlabs/http-server" class="btn btn-secondary btn-sm" target="_blank">{{ 'View Project'|trans }}</a>
+                        </div>
+                    </div><!--//content-->
+                </div><!--//item-->
             </div><!--//row-->
         </div><!--//container-->
     </section><!--//about-->
