--- a/templates/devAid/layout-sidebar.html.twig
+++ b/templates/devAid/layout-sidebar.html.twig
@@ -8,7 +8,7 @@
                 <div class="col-lg-3">
                     {% block left_sidebar %}{% endblock %}
 
-                    {% include 'devAid/includes/ads/sidebar.html.twig' %}
+                    {# {% include 'devAid/includes/ads/sidebar.html.twig' %} #}
 
                     {% if donate is defined and donate == true %}
                         {% include 'devAid/includes/donate-sidebar.html.twig' %}
