--- a/templates/devAid/includes/donate-sidebar.html.twig
+++ b/templates/devAid/includes/donate-sidebar.html.twig
@@ -1,7 +1,7 @@
 <div class="row text-center">
     <div class="col" style="margin: 25px 0">
         <a class="btn btn-light" href="{{ path('contribute') }}">
-            <i class="fas fa-heart" style="color: red"></i> {{ 'supports_to_thenlabs'|trans }}
+            <i class="fas fa-heart" style="color: red"></i> {{ 'contribute'|trans }}
         </a>
     </div>
 </div>
