--- a/templates/devAid/page-contribute-en.html.twig
+++ b/templates/devAid/page-contribute-en.html.twig
@@ -18,7 +18,7 @@
     <p>In the case of users with programming knowledge, they could <strong> use our projects to help us discover and / or correct new bugs </strong>, as well as <strong> propose new features </strong> that contribute to improving projects in general.</p>
     <p>Since our reason for being is open source software, all of our projects (including this site) can be found on our <a href="{{ github_profile }}"> GitHub </a> profile. Feel free to make use of them.</p>
 
-    <h5 id="money">4. Make a monetary contribution.</h5>
+    {# <h5 id="money">4. Make a monetary contribution.</h5>
     <p>All the work we have done so far has been in our free time as ThenLabs is a very recently created venture and we are not yet able to get involved full time.</p>
     <p>Due to the fact that lately our free time is insufficient to advance at the required speed, we have opened the possibility of receiving monetary donations with the aim of being able to dedicate more time to the project.</p>
     <p>On this issue of fundraising, we want to tell you that ThenLabs is an undertaking created by independent Cuban programmers and at the moment we only have the following alternatives for money transfers that users may want to do.</p>
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </li>
-    </ol>
+    </ol> #}
     <p>Thank you very much!</p>
 {% endblock %}
 
