--- a/templates/devAid/page-contribute-es.html.twig
+++ b/templates/devAid/page-contribute-es.html.twig
@@ -18,7 +18,7 @@
     <p>En el caso de los usuarios con conocimientos de programación estos podrían <strong>usar nuestros proyectos para ayudarnos a descubrir y/o corregir nuevos bugs</strong> , así como también <strong>proponer nuevas características</strong> que contribuyan a mejorar los proyectos en general.</p>
     <p>Dado que nuestra razón de ser es el software de código abierto, todos nuestros proyectos(incluso este sitio) se pueden encontrar en nuestro perfil de <a href="{{ github_profile }}">GitHub</a>. Siéntase libre de hacer uso de los mismos.</p>
 
-    <h5 id="money">4. Hacer una contribución monetaria.</h5>
+    {# <h5 id="money">4. Hacer una contribución monetaria.</h5>
     <p>Todo el trabajo que hemos realizado hasta el momento ha sido en nuestro tiempo libre pues ThenLabs es un emprendimiento de muy reciente creación y todavía no nos es posible involucrarnos a tiempo completo.</p>
     <p>Debido a que últimamente el tiempo libre nos resulta insuficiente para avanzar a la velocidad requerida, hemos abierto la posibilidad de recibir donaciones monetarias con el objetivo de poder dedicar más tiempo al proyecto.</p>
     <p>Sobre este tema de la recaudación de fondos queremos comentarle que ThenLabs es un emprendimiento creado por programadores cubanos independientes y por el momento solo tenemos las siguientes alternativas para los envíos de dinero que puedan querer hacer los usuarios.</p>
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </li>
-    </ol>
+    </ol> #}
     <p>Muchas gracias.</p>
 {% endblock %}
 
