--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,6 +63,31 @@
       gtag('config', '{{ google_analytics_id }}');
     </script>
 
+    <style type="text/css">
+        h2, h3, h4, h5, h6 { margin: 40px 0 5px 0; }
+
+        .wrapper-content {
+            background: #fff;
+            border-radius: 4px;
+        }
+
+        .section-menu {
+            padding: 20px 5px 20px 15px;
+        }
+
+        .docs-content {
+            padding: 5px;
+            background-clip: padding-box;
+        }
+
+        @media (min-width: 576px) {
+            h2, h3, h4, h5, h6 { margin: 40px 0 25px 0; }
+
+            .docs-content {
+                padding: 30px;
+            }
+        }
+    </style>
     {% block styles %}{% endblock %}
 </head>
 
