--- a/templates/devAid/includes/ads/footer.html.twig
+++ b/templates/devAid/includes/ads/footer.html.twig
@@ -1,8 +1,8 @@
-{# <div class="row d-block d-md-none d-lg-none d-xl-none">
+<div class="row d-block d-md-none d-lg-none d-xl-none">
     <div class="col">
-        <iframe data-aa="1430362" src="//ad.a-ads.com/1430362?size=320x100" scrolling="no" style="width:320px; height:100px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+        <iframe data-aa="1637913" src="//ad.a-ads.com/1637913?size=320x100" scrolling="no" style="width:320px; height:100px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
     </div>
-</div> #}
+</div>
 
 <div class="row d-none d-md-block d-lg-block d-xl-block">
     <div class="col">
