--- a/templates/devAid/includes/ads/footer.html.twig
+++ b/templates/devAid/includes/ads/footer.html.twig
@@ -1,4 +1,4 @@
-<div class="row d-block d-md-none d-lg-none d-xl-none">
+{# <div class="row d-block d-md-none d-lg-none d-xl-none">
     <div class="col">
         <iframe data-aa="1637913" src="//ad.a-ads.com/1637913?size=320x100" scrolling="no" style="width:320px; height:100px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
     </div>
@@ -8,4 +8,4 @@
     <div class="col">
         <iframe data-aa="1637841" src="//ad.a-ads.com/1637841?size=728x90" scrolling="no" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
     </div>
-</div>
+</div> #}
