Se ha puesto un botón en la documentación de los proyectos para dar una estrella de GitHub

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,6 +63,9 @@
       gtag('config', '{{ google_analytics_id }}');
     </script>
 
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+
     <style type="text/css">
         h2, h3, h4, h5, h6 { margin: 40px 0 5px 0; }
 
